[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8424, 13.6599 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.595173, 0.595173 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15.3401 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="blink" type="Timer" parent="Timer"]
wait_time = 0.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/blink" to="." method="_on_blink_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
